Fixed checkbox, aligned it back to the right

--- a/less-tabs/options.css
+++ b/less-tabs/options.css
@@ -28,23 +28,24 @@ input[type=number]
 	font-size: 130%;
 }
 
-/* Test custom checkbox: Credit w3schools */
+/* Cooler looking checkbox. Credit: w3schools */
 
 /* Customize the checkbox */
-.checkbox {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+.checkbox 
+{
+  /* display: block; */
+  position: relative; 
+  padding-right: 30px;
+  /* margin-bottom: 12px; */
   cursor: pointer;
-  font-size: 22px;
+  /* font-size: 22px; */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
-/* Hide the browser's default checkbox */
+/* Hide the default checkbox */
 .checkbox input {
   position: absolute;
   opacity: 0;
@@ -55,7 +56,7 @@ input[type=number]
 .checkmark {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   height: 25px;
   width: 25px;
   background-color: #eee;
@@ -66,12 +67,12 @@ input[type=number]
   background-color: #ccc;
 }
 
-/* When the checkbox is checked, add a blue background */
+/* When the checkbox is checked, add a green background */
 .checkbox input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: #28b473;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
+/* Create the checkmark (hidden when not checked) */
 .checkmark:after {
   content: "";
   position: absolute;
@@ -83,7 +84,7 @@ input[type=number]
   display: block;
 }
 
-/* Style the checkmark/indicator */
+/* Style the checkmark */
 .checkbox .checkmark:after {
   left: 9px;
   top: 5px;
